--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Portfólio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -27,54 +27,47 @@
     <div>
         <h2>Hi There! I am</h2>
         <h2 class="digitando">Front-End Developer</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi labore adipisci, ab laborum ratione quidem amet mollitia rerum beatae ad maxime eum est nam velit odit doloremque nobis, vel sint!</p>
-        <a href="#">Dowload CV</a>
+        <p>Olá eu me chamo Moisés, e seja bem vindo ao meu site de portfólio, nele vou me apresentar um pouco e mostrar o que eu sou capaz de fazer, espero que tenha um boa experiência e goste.</p>
+        <a href="downloads/Profile.pdf" download="currículo">Dowload CV</a>
     </div>
-    <img src="img/ilustrativo.jpg" alt="ilustrativa">
+    <img src="img/IMG_20221120_215753_872-removebg-preview.png" alt="ilustrativa">
    </section>
    <main>
     <article aria-label="seção sobre mim" class="sobre">
         <div class="sobre-titulo">
             <h1>Sobre mim</h1>
-            <p>Perfil Profissiona - Tudo sobre mim</p>
+            <p>Perfil Profissional - Tudo sobre mim</p>
             <div>
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
         </div>
-        <img src="img/ilustrativo.jpg" alt="ilustrativa">
+        <img src="img/IMG_20221120_215753_872-removebg-preview.png" alt="ilustrativa">
         <div class="sobre-conteudo">
             <div class="sobre-texto">
                 <h1>Eu sou o Moisés</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error possimus, provident vel,
-                    accusantium eligendi delectus officia dolore repellat neque modi eaque illo debitis reiciendis!
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error possimus, provident vel,
-                    accusantium eligendi delectus officia dolore repellat neque modi eaque illo debitis reiciendis!
-                    <br>
-                    <br>
-                    provident
-                    itaque reprehenderit molestiae distinctio repellendus necessitatibus quis autem in doloribus
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error possimus, provident vel,
-                    accusantium eligendi delectus officia dolore repellat neque modi eaque illo debitis reiciendis!
+                <p>Oi eu sou o Moisés, sou de uma cidade do interior do Paraná, curso Engenharia de Software na Uniguaçu, tenho como objetivo me tornar um desenvolvedor Front-End, estou estudando para isso, mas não me limito só a isso, encaro qualquer desafio que me proporem.
+                <br>
+                <br>
+                Sou apaixonado no mundo da tecnologia, sempre busco aprender mais e mais, fico impressionado com tamanha evolução que ela tem, por esse motivo escolhi seguir nessa carreira.
                 </p>
             </div>
             <div class="sobre-info">
-                <p><i class="fa-solid fa-calendar-days"></i>Date of birth: 04 mai 2001</p>
-                <p><i class="fa-sharp fa-solid fa-laptop-code"></i>Freelance: Available</p>
-                <p><i class="fa-solid fa-location-dot"></i>Address: Curitiba, Brazil</p>
-                <p><i class="fa-sharp fa-solid fa-globe"></i>Spoken Langages: Brazil, Espanõl, English</p>
-                <p><i class="fa-solid fa-flag"></i>Nationality: Russian</p>
-                <p><i class="fa-solid fa-phone-volume"></i>Phone: +99 9999-9999</p>
-                <p><i class="fa-solid fa-envelope"></i>Email: seuemail@hotmail.com</p>
+                <p><i class="fa-solid fa-calendar-days"></i>Data de Aniversário: 15 março 2004</p>
+                <p><i class="fa-solid fa-location-dot"></i>Endereço: Missal, Paraná, Brazil</p>
+                <p><i class="fa-sharp fa-solid fa-globe"></i>Idiomas: Português</p>
+                <p><i class="fa-solid fa-flag"></i>Nacionalidade: Brasileiro</p>
+                <p><i class="fa-solid fa-phone-volume"></i>Telefone: +55 4598813-5524</p>
+                <p><i class="fa-solid fa-envelope"></i>Email: moisessutil222@gmail.com</p>
             </div>
         </div>
     </article>
    </main>
     <section class="services">
         <div class="sobre-titulo">
-            <h1>Sobre mim</h1>
-            <p>Perfil Profissiona - Tudo sobre mim</p>
+            <h1>Habilidades</h1>
+            <p>Minhas principais habilidades</p>
             <div>
                 <span></span>
                 <span></span>
@@ -86,27 +79,27 @@
                 <li>
                     <i class="fa-sharp fa-solid fa-pen-to-square"></i>
                     <h3>Front-End</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam blanditiis totam nulla error neque beatae eius repellat enim unde, assumenda debitis iste omnis mollitia dolor excepturi, nesciunt earum quae autem!</p>
+                    <p>Tenho o meu foco de estudo por agora no Front-End, principalmente a criação de sites responsivos e interface de usúario. Mas no futuro pretendo aprender também o Back-End</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-react"></i>
                     <h3>React JS</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam blanditiis totam nulla error neque beatae eius repellat enim unde, assumenda debitis iste omnis mollitia dolor excepturi, nesciunt earum quae autem!</p>
+                    <p>Essa biblioteca eu comecei a estudá-la há pouco tempo, mas já tenho os conhecimentos básicos, e um projeto finalizado.</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-html5"></i>
                     <h3>HTML 5</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam blanditiis totam nulla error neque beatae eius repellat enim unde, assumenda debitis iste omnis mollitia dolor excepturi, nesciunt earum quae autem!</p>
+                    <p>Essa linguagem e estudo já faz um tempo, tenho alguns projetos bem legais feitos que me permitiram aprender mais.</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-css3-alt"></i>
                     <h3>CSS 3</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam blanditiis totam nulla error neque beatae eius repellat enim unde, assumenda debitis iste omnis mollitia dolor excepturi, nesciunt earum quae autem!</p>
+                    <p>Aprendi junto com o HTML, e fiz alguns projetos com essas duas tecnologias, sei fazer coisas bem interessantes como um efeito parallax.</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-js"></i>
                     <h3>JavaScript(ES6)</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam blanditiis totam nulla error neque beatae eius repellat enim unde, assumenda debitis iste omnis mollitia dolor excepturi, nesciunt earum quae autem!</p>
+                    <p>Essa linguagem de programação me inseriu no mundo do Front-End, ela me permitiu consolidar os conhecimentos de lógica de programação.</p>
                 </li>
             </ul>
         </div>
@@ -114,7 +107,6 @@
     <div class="my-resume">
         <div class="sobre-titulo">
             <h1>Resumo</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             <div>
                 <span></span>
                 <span></span>
@@ -125,19 +117,17 @@
             <h2 class="experience"><i class="fa-solid fa-folder"></i>PROJETOS</h2>
             <div class="experience-content">
                 <div>
-                    <span>2017-2019</span>
-                    <h3>UI/UX Developer - Themeforest</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim</p>
+                    <h3>Projeto Android</h3>
+                    <p>Um site totalmente feito em HTML5 e CSS3, conta a história do mascote do Android. <br>
+                    <a href="https://moisessutil.github.io/projeto-android/" target="_blank" class="projetos">Link do Projeto</a></p>
                 </div>
                 <div>
-                    <span>2015-2017</span>
-                    <h3>Web Design - BubbleBix</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ex.</p>
+                    <h3>Projeto Cordel</h3>
+                    <p>Um site totalmente feito em HTML5 e CSS3, conta um cordel feito por Milton Duarte e tem um efeito de parallax bem intessante. <br> <a href="https://moisessutil.github.io/projeto-cordel/" target="_blank" class="projetos">Link do Projeto</a></p></p>
                 </div>
                 <div>
-                    <span>2022-2023</span>
-                    <h3>Web Developer - GlobalSix</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ex.</p>
+                    <h3>Projeto Scret Word</h3>
+                    <p>Projeto feito usando ReactJS, um jogo de adivinha as palavra feito em react usando os fundamentos principais e alguns hooks. <br> OBS: esse projeto não tem link pois não consegui fazer deploy dele, caso queira ver ele funcionando baixe o arquivo no meu GitHub.</p>
                 </div>
                 <ul>
                     <li><i class="fa-sharp fa-solid fa-circle"></i></li>
@@ -148,16 +138,19 @@
             <h2 class="education"><i class="fa-solid fa-book"></i>EDUCAÇÃO</h2>
             <div class="education-content">
                 <div>
-                    <span>2015 - 2019</span>
-                    <h3>Bachalor - University</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim</p>
+                    <span>2023 - 2026</span>
+                    <h3>Engenharia de Software - Bacharelado</h3>
                 </div>
                 <div>
-                    <span>2019 - 2022</span>
-                    <h3>WebMaster - Fullstack</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim</p>
+                    <span>2023</span>
+                    <h3>Curso de HTML5 e CSS3 - Curso em Video</h3>
+                </div>
+                <div>
+                    <span>2023</span>
+                    <h3>Curso de JavaScript(ES6) - Curso em Video</h3>
                 </div>
                 <ul>
+                    <li><i class="fa-sharp fa-solid fa-circle"></i></li>
                     <li><i class="fa-sharp fa-solid fa-circle"></i></li>
                     <li><i class="fa-sharp fa-solid fa-circle"></i></li>
                 </ul>
@@ -228,7 +221,7 @@
                     <li>
                         <i class="fa-solid fa-mug-hot"></i>
                         <span>1</span>
-                        <p>Metodologia Agil</p>
+                        <p>Metodologia Ágil</p>
                     </li>
                     <li>
                         <i class="fa-solid fa-medal"></i>
@@ -261,8 +254,7 @@
     </div>
     <footer>
         <div class="sobre-titulo">
-            <h1>Resumo</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <h1>Redes Sociais</h1>
             <nav aria-label="navegação de links sociais">
                 <ul class="footer-social">
                     <li><a href="https://www.linkedin.com/in/mois%C3%A9s-schmitz-sutil-974a38231/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
