--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#resume">Resumo</a></li>
-            <li><a href="#portfolio">Porfólio</a></li>
+            <li><a href="#portfolio">Portfólio</a></li>
             <li><a href="#contact">Contato</a></li>
         </ul>
         <i class="fa-solid fa-bars"></i>
