--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <ul class="navegacao-primaria">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>
-            <li><a href="#resume">Resumo</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#portfolio">Portfólio</a></li>
-            <li><a href="#contact">Contato</a></li>
+            <li><a href="#redes">Redes Sociais</a></li>
         </ul>
         <i class="fa-solid fa-bars"></i>
     </nav>
