--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <i class="fa-solid fa-bars"></i>
     </nav>
    </header>
-   <section aria-label="seção currículo dowload Moisés Sutil" class="section-div" >
+   <section aria-label="seção currículo dowload Moisés Sutil" class="section-div" id="home" >
     <div>
         <h2>Hi There! I am</h2>
         <h2 class="digitando">Front-End Developer</h2>
@@ -33,7 +33,7 @@
     <img src="img/IMG_20221120_215753_872-removebg-preview.png" alt="ilustrativa">
    </section>
    <main>
-    <article aria-label="seção sobre mim" class="sobre">
+    <article aria-label="seção sobre mim" class="sobre" id="about">
         <div class="sobre-titulo">
             <h1>Sobre mim</h1>
             <p>Perfil Profissional - Tudo sobre mim</p>
@@ -74,7 +74,7 @@
                 <span></span>
             </div>
         </div>
-        <div class="my-services">
+        <div class="my-services" id="habilidades">
             <ul>
                 <li>
                     <i class="fa-sharp fa-solid fa-pen-to-square"></i>
@@ -113,7 +113,7 @@
                 <span></span>
             </div>
         </div>
-        <div class="resume-generica">
+        <div class="resume-generica" id="portfolio">
             <h2 class="experience"><i class="fa-solid fa-folder"></i>PROJETOS</h2>
             <div class="experience-content">
                 <div>
@@ -253,7 +253,7 @@
         </div>
     </div>
     <footer>
-        <div class="sobre-titulo">
+        <div class="sobre-titulo" id="redes">
             <h1>Redes Sociais</h1>
             <nav aria-label="navegação de links sociais">
                 <ul class="footer-social">
